--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\User\Documents\programm\photo\hammouda.png" alt="yasser hammouda picture"></td>
+        <td><img src="hammouda.png" alt="yasser hammouda picture"></td>
         <td><h1>Hammouda yasser</h1>
         <p><em>maker and founder of this site.</em></p>
         <p>I am <b>Hammouda Yasser Abdel Nour</b>, I was born in 2004 in Algeria, exactly in Ghardaia. I study at the <b><a href="http://elearning.univ-ghardaia.dz/moodle/?redirect=0">University of Ghardaia</a></b>, majoring in automated media. My hobby is programming, and this is <b>the first site I made</b>.</p></td>
@@ -42,7 +42,7 @@
       </tr>
     </table>
     <center>
-    <p><a href="file:///C:/Users/User/Documents/programm/page/contact-me.html">contact me</a></p>
+    <p><a href="contact-me.html">contact me</a></p>
     </center>
   </body>
 </html>
