--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>yasser personal site</title>
   </head>
-  <body>
+  <body style="background-color: #74992e;">
     <table cellspacing="20">
       <tr>
         <td><img src="hammouda.png" alt="yasser hammouda picture"></td>
