--- a/contact-me.html
+++ b/contact-me.html
@@ -2,8 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>contact me</title>
+    <link rel="stylesheet" href="C:\Users\User\Documents\programm\cv\style\style.css">
   </head>
   <body>
+    <h1><center>contact me</center></h1>
     <p><em><b>phone number</b></em>: +213549448527</p>
     <p><em><b>E-mail</b></em>: hammoudayaser41@gmail.com</p>
     <p><em><b>The address</b></em>: Alger/Ghardaia/beni-isguen</p>
