--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
   <head>
     <meta charset="utf-8">
     <title>yasser personal site</title>
+    <link rel="stylesheet" href="C:\Users\User\Documents\programm\cv\style\style.css">
   </head>
-  <body style="background-color: #74992e;">
+  <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="hammouda.png" alt="yasser hammouda picture"></td>
+        <td><img class="Yasser" src="C:\Users\User\Documents\programm\cv\tools\hammouda.png" alt="yasser hammouda picture"></td>
         <td><h1>Hammouda yasser</h1>
         <p><em>maker and founder of this site.</em></p>
         <p>I am <b>Hammouda Yasser Abdel Nour</b>, I was born in 2004 in Algeria, exactly in Ghardaia. I study at the <b><a href="http://elearning.univ-ghardaia.dz/moodle/?redirect=0">University of Ghardaia</a></b>, majoring in automated media. My hobby is programming, and this is <b>the first site I made</b>.</p></td>
       </tr>
     </table>
-    <hr size"1" noshade>
+    <hr>
     <h3>schools and University:</h3>
     <ul>
       <li><em><b>2009 to 2015:</b></em> Primary Abu Yaqoub</li>
@@ -20,12 +21,14 @@
       <li><em><b>2018 to 2022:</b></em> Moufdi Zakaria High School</li>
       <li><em><b>2022 to now:</b></em> Ghardaia University</li>
     </ul>
+    <hr>
     <h3>Languages:</h3>
     <ul>
       <li><p><b>Arabic: </b>⭐⭐⭐⭐⭐</p></li>
       <li><p><b>English: </b>⭐⭐⭐</p></li>
       <li><p><b>Franch: </b>⭐⭐⭐⭐</p></li>
     </ul>
+    <hr>
     <h3>habits:</h3>
     <table>
       <tr>
@@ -42,7 +45,9 @@
       </tr>
     </table>
     <center>
-    <p><a href="contact-me.html">contact me</a></p>
+      <div>
+        <button class="contact_me" ><p><a class="contact_me1" href="C:\Users\User\Documents\programm\cv\tools\contact-me.html">contact me</a></p></button>
+      </div>
     </center>
   </body>
 </html>
