--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>yasser personal site</title>
-    <link rel="stylesheet" href="C:\Users\User\Documents\programm\cv\style\style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <table cellspacing="20">
