--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img class="Yasser" src="C:\Users\User\Documents\programm\cv\tools\hammouda.png" alt="yasser hammouda picture"></td>
+        <td><img class="Yasser" src="hammouda.png" alt="yasser hammouda picture"></td>
         <td><h1>Hammouda yasser</h1>
         <p><em>maker and founder of this site.</em></p>
         <p>I am <b>Hammouda Yasser Abdel Nour</b>, I was born in 2004 in Algeria, exactly in Ghardaia. I study at the <b><a href="http://elearning.univ-ghardaia.dz/moodle/?redirect=0">University of Ghardaia</a></b>, majoring in automated media. My hobby is programming, and this is <b>the first site I made</b>.</p></td>
