--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img class="Yasser" src="hammouda.png" alt="yasser hammouda picture"></td>
         <td><h1>Hammouda yasser</h1>
         <p><em>maker and founder of this site.</em></p>
-        <p>I am <b>Hammouda Yasser Abdel Nour</b>, I was born in 2004 in Algeria, exactly in Ghardaia. I study at the <b><a href="http://elearning.univ-ghardaia.dz/moodle/?redirect=0">University of Ghardaia</a></b>, majoring in automated media. My hobby is programming, and this is <b>the first site I made</b>.</p></td>
+        <p>I am <b>Hammouda Yasser Abdel Nour</b>, I was born in 2004 in Algeria, exactly in Ghardaia. I study at the <b><a class="lien" href="http://elearning.univ-ghardaia.dz/moodle/?redirect=0">University of Ghardaia</a></b>, majoring in automated media. My hobby is programming, and this is <b>the first site I made</b>.</p></td>
       </tr>
     </table>
     <hr>
