--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>yasser personal site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="hammouda.png">
   </head>
   <body>
     <table cellspacing="20">
