--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </table>
     <center>
       <div>
-        <button class="contact_me" ><p><a class="contact_me1" href="C:\Users\User\Documents\programm\cv\tools\contact-me.html">contact me</a></p></button>
+        <button class="contact_me" ><p><a class="contact_me1" href="contact-me.html">contact me</a></p></button>
       </div>
     </center>
   </body>
