--- a/contact-me.html
+++ b/contact-me.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>contact me</title>
-    <link rel="stylesheet" href="C:\Users\User\Documents\programm\cv\style\style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><center>contact me</center></h1>
